--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,8 @@
     }
    ],
    "source": [
-    "print(\"alu\")"
+    "print(\"alu\")\n",
+    "#hey mama hey test kortesi mama hey"
    ]
   }
  ],
